2008-07-28 17:25  cvs

	* lib/WordPress/XMLRPC.pm, t/12_categories.t: added getCategory(),
	  this was philosophically hard.. because there was no getCategory
	  method in xmlrpc.php ... but it is very useful.

2008-07-28 09:31  cvs

	* lib/WordPress/XMLRPC.pm, t/11_category_new.t: Fixed newCategory
	  It was suggesting argument is string but it should have  been
	  hash ref, now checks that the hash ref contains at least 'name'
	  key.

2008-06-25 11:19  cvs

	* Changes, MANIFEST: added changefile

2008-06-25 11:18  cvs

	* lib/WordPress/XMLRPC.pm: Added extra argument checking, now if
	  you pass a scalar or hash instead of a hash ref when needed, we
	  croak about it.  Someone contacted me trying to pass a hash
	  instead of a hash ref to newPost().

2008-06-25 07:47  cvs

	* Makefile.PL, lib/WordPress/XMLRPC.pm, t/00_basic.t,
	  t/02_XMLRPC.t, t/04_XMLRPC_page.t, t/04_XMLRPC_post.t,
	  t/10_XMLRPC.t.optional, t/11_category_new.t, t/12_categories.t:
	  Took out usage of Smart::Comments, some people were having
	  trouble with deps.

2008-06-20 11:09  cvs

	* lib/WordPress/XMLRPC.pm: updated documentation

2008-06-19 15:01  cvs

	* lib/WordPress/XMLRPC.pm, t/11_category_new.t, t/12_categories.t:
	  testing out newCategory, but it fails. I think WordPress has a
	  bug.

2008-02-01 19:33  cvs

	* MANIFEST, Makefile.PL, README, t/00_basic.t, t/02_XMLRPC.t,
	  t/04_XMLRPC_page.t, t/04_XMLRPC_post.t, t/10_XMLRPC.out,
	  t/10_XMLRPC.t.optional, t/analize_xmlrpc.pl, t/test.pl, t/wppost,
	  t/xmlrpc.php, lib/WordPress/XMLRPC.pm: Initial revision

2008-02-01 19:33  cvs

	* MANIFEST, Makefile.PL, README, t/00_basic.t, t/02_XMLRPC.t,
	  t/04_XMLRPC_page.t, t/04_XMLRPC_post.t, t/10_XMLRPC.out,
	  t/10_XMLRPC.t.optional, t/analize_xmlrpc.pl, t/test.pl, t/wppost,
	  t/xmlrpc.php, lib/WordPress/XMLRPC.pm: init import
