@@ -1,15 +1,24 @@
 --- #YAML:1.0
-name:                WordPress-XMLRPC
-version:             1.18
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    SOAP::Lite:                    0
-    XMLRPC::Lite:                  0
-    YAML:                          0
+name:               WordPress-XMLRPC
+version:            1.19
+abstract:           api to wordpress xml rpc calls
+author:
+    - Leo Charre leocharre at cpan dot org
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    SOAP::Lite:    0
+    XMLRPC::Lite:  0
+    YAML:          0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
